force-app/main/default/objects/Batalha__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Data de início da batalha</description>
    <label>Data de inicio</label>
    <type>Date</type>
</CustomField>