force-app/main/default/objects/Batalha__c/fields/DataTermino__c.field-meta.xml
<CustomField>
    <fullName>DataTermino__c</fullName>
    <description>Data de término da batalha</description>
    <label>Data de término</label>
    <type>Date</type>
</CustomField>