force-app/main/default/objects/Batalha__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descreve a batalha que os heróis irão enfrentar</description>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>