force-app/main/default/objects/Batalha__c/fields/NomeBatalha__c.field-meta.xml
<CustomField>
    <fullName>NomeBatalha__c</fullName>
    <description>nome da batalha</description>
    <label>Nome da batalha</label>
    <length>80</length>
    <type>Text</type>
</CustomField>